--- a/android-kotlin/feature_navigateBar/src/main/res/layout/activity_faq.xml
+++ b/android-kotlin/feature_navigateBar/src/main/res/layout/activity_faq.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_bg"
+    android:background="@drawable/main_bg"
     android:padding="24dp">
 
     <ImageView
