--- a/android-kotlin/feature_home/src/main/res/layout/fragment_home.xml
+++ b/android-kotlin/feature_home/src/main/res/layout/fragment_home.xml
@@ -344,7 +344,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="horizontal"
-                    android:layout_marginTop="12dp"/>
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="28dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/commuteRecyclerView"
