--- a/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
+++ b/android-kotlin/feature_chatbot/src/main/res/layout/item_chat_bot_directions.xml
@@ -36,7 +36,7 @@
             android:layout_height="40dp"
             android:background="@drawable/glass_background"
             android:paddingStart="12dp"
-            android:paddingEnd="12dp"
+        android:paddingEnd="12dp"
             android:layout_marginBottom="8dp">
 
             <TextView
@@ -121,7 +121,7 @@
             android:text="Go Now"
             android:drawableStart="@drawable/ic_start"
             android:drawablePadding="8dp"
-            android:backgroundTint="@drawable/chatbot_bg_light"
+            android:background="@drawable/chatbot_bg_light"
             android:textColor="@color/white"
             android:fontFamily="sans-serif-medium"/>
 
