--- a/android-kotlin/feature_saveRoute/src/main/res/values/colors.xml
+++ b/android-kotlin/feature_saveRoute/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#B31D1D</color>
     <color name="gray">#808080</color>
+    <color name="glass_bg">#80FFFFFF</color>
+    <color name="transparent">#00000000</color>
     <color name="primary">#2196F3</color>
+
 </resources>
